fixed z-index

--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ img {
   bottom: 0;
   left: 0;
   background-color: #000;
-  z-index: 1;
+  z-index: 2;
   display: flex;
   justify-content: center;
   align-items: center;
